--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,5 +42,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.github.armcha:LuseenBottomNavigation:1.8.2'
-    implementation 'com.github.siyamed:android-shape-imageview:0.9.+@aar'
+    implementation 'com.github.siyamed:android-shape-imageview:0.9.3'
+    implementation 'com.github.BeppiMenozzi:TriStateToggleButton:1.1.4'
+    implementation 'com.wrapp.floatlabelededittext:library:0.0.6'
 }
