--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,4 +58,6 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:15.0.1'
     implementation 'com.github.Binary-Finery:Bungee:master-SNAPSHOT'
     implementation 'com.aurelhubert:ahbottomnavigation:2.1.0'
+    implementation 'net.cachapa.expandablelayout:expandablelayout:2.9.2'
+    implementation 'io.github.yavski:fab-speed-dial:1.0.6'
 }
