--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,15 +10,15 @@
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.GET_TASKS"
-        tools:ignore="ProtectedPermissions"
-        />
+    <uses-permission
+        android:name="android.permission.GET_TASKS"
+        tools:ignore="ProtectedPermissions" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher2"
-        android:roundIcon="@mipmap/ic_launcher2"
         android:label="@string/app_name"
+        android:roundIcon="@mipmap/ic_launcher2"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <meta-data
@@ -26,13 +26,10 @@
             android:value="@string/google_key" />
 
         <service android:name=".notifications.MyFireBaseMessagingService">
-
-        <intent-filter>
-        <action android:name="com.google.firebase.MESSAGING_EVENT"/>
-        </intent-filter>
-
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
         </service>
-
         <service android:name=".Services.ServiceUpdateLocation" />
 
         <activity android:name=".Activities.SplashActivity" />
@@ -58,7 +55,12 @@
         <activity
             android:name=".Activities.ChatActivity"
             android:label="@string/title_activity_chat"
-            android:theme="@style/AppTheme"></activity>
+            android:theme="@style/AppTheme" />
+        <activity android:name=".Activities.LocationActivity"
+            android:windowSoftInputMode="stateAlwaysHidden"
+            >
+
+        </activity>
     </application>
 
 </manifest>
